Added Outcome messages, Scoring system, and a restart button